--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -16,48 +16,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" id="v0x-S0-xf8" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EntryCell" id="tTL-zv-VOJ" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="120"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="v0x-S0-xf8" translatesAutoresizingMaskIntoConstraints="NO" id="c7G-Qm-wO8">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tTL-zv-VOJ" id="dqQ-0D-daX">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KgY-dl-qt0">
-                                            <rect key="frame" x="20" y="11" width="190" height="21"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="KgY-dl-qt0" secondAttribute="height" multiplier="190:21" id="6En-W3-8rt"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" ambiguous="YES" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bqA-2m-YUU">
-                                            <rect key="frame" x="20" y="40" width="374" height="72"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="bqA-2m-YUU" secondAttribute="height" multiplier="187:36" id="skA-CX-1z3"/>
-                                            </constraints>
-                                            <string key="text">Entry text øúh tohduthodu ohudoheuo euhothud oethusothunoh uoehu nahou ntountohen thoentuh oenuhoenthoanehaouh atohoateu oanuhosatuantuhaouhonuh oaetuontusnothu ahu soathuno hnsth nthu notuh tuhsna tuhnthu nthusrauao</string>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Nov 11, 2019 at 11:28pm" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="98U-HB-DQy">
-                                            <rect key="frame" x="227" y="12" width="167" height="21"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="98U-HB-DQy" secondAttribute="height" multiplier="167:21" id="CC8-G4-R1y"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
+                                    <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="bodyLabel" destination="bqA-2m-YUU" id="F8b-6f-cz5"/>
-                                    <outlet property="timestampLabel" destination="98U-HB-DQy" id="cFm-cg-TAw"/>
-                                    <outlet property="titleLabel" destination="KgY-dl-qt0" id="SwI-yH-1BL"/>
-                                    <segue destination="BYZ-38-t0r" kind="show" identifier="ViewEntryDetailSegue" id="OAT-ld-dGx"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="ViewEntryDetailSegue" id="LB8-To-VPJ"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -147,6 +114,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="OAT-ld-dGx"/>
+        <segue reference="LB8-To-VPJ"/>
     </inferredMetricsTieBreakers>
 </document>
