--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Journal-->
         <scene sceneID="jEE-Bc-UIb">
             <objects>
-                <tableViewController id="typ-tR-q7I" sceneMemberID="viewController">
+                <tableViewController id="typ-tR-q7I" customClass="EntriesTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="wFX-t4-Bcv">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -82,7 +82,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dx7-pg-2T4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-677" y="173"/>
+            <point key="canvasLocation" x="-714" y="188"/>
         </scene>
         <!--Entry Detail View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -150,7 +150,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EDP-dg-FzQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1757.9710144927537" y="222.99107142857142"/>
+            <point key="canvasLocation" x="-1677" y="188"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
