--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -92,31 +93,45 @@
                                 <rect key="frame" x="0.0" y="140" width="414" height="722"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </view>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3zB-UG-weX">
-                                <rect key="frame" x="20" y="160" width="374" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TcX-QL-usd">
-                                <rect key="frame" x="20" y="202" width="374" height="650"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="2Eg-SX-Ig5">
+                                <rect key="frame" x="20" y="160" width="374" height="692"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Fc1-lv-0e3">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="🙂"/>
+                                            <segment title="😐"/>
+                                            <segment title="☹️"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3zB-UG-weX">
+                                        <rect key="frame" x="0.0" y="39" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TcX-QL-usd">
+                                        <rect key="frame" x="0.0" y="81" width="374" height="611"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="TcX-QL-usd" secondAttribute="bottom" id="BYi-9H-L1Y"/>
+                                    <constraint firstItem="TcX-QL-usd" firstAttribute="top" secondItem="3zB-UG-weX" secondAttribute="bottom" constant="8" id="d1T-nt-NqC"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="TcX-QL-usd" firstAttribute="top" secondItem="3zB-UG-weX" secondAttribute="bottom" constant="8" symbolic="YES" id="0CT-rY-MXn"/>
-                            <constraint firstItem="TZw-Ed-qlY" firstAttribute="trailing" secondItem="3zB-UG-weX" secondAttribute="trailing" constant="20" id="157-nc-deQ"/>
                             <constraint firstItem="dNC-AO-79d" firstAttribute="leading" secondItem="TZw-Ed-qlY" secondAttribute="leading" id="6qp-mC-Rqo"/>
-                            <constraint firstItem="TZw-Ed-qlY" firstAttribute="bottom" secondItem="TcX-QL-usd" secondAttribute="bottom" constant="10" id="9NC-3q-o3g"/>
-                            <constraint firstItem="3zB-UG-weX" firstAttribute="top" secondItem="TZw-Ed-qlY" secondAttribute="top" constant="20" id="Ec8-K2-vOD"/>
+                            <constraint firstItem="2Eg-SX-Ig5" firstAttribute="leading" secondItem="TZw-Ed-qlY" secondAttribute="leading" constant="20" id="7A8-SE-5zE"/>
+                            <constraint firstItem="TZw-Ed-qlY" firstAttribute="bottom" secondItem="2Eg-SX-Ig5" secondAttribute="bottom" constant="10" id="Esm-ZZ-cXm"/>
                             <constraint firstItem="TZw-Ed-qlY" firstAttribute="trailing" secondItem="dNC-AO-79d" secondAttribute="trailing" id="HPI-tv-HbZ"/>
-                            <constraint firstItem="TcX-QL-usd" firstAttribute="leading" secondItem="3zB-UG-weX" secondAttribute="leading" id="N7M-zS-9pT"/>
-                            <constraint firstItem="TcX-QL-usd" firstAttribute="trailing" secondItem="3zB-UG-weX" secondAttribute="trailing" id="YCZ-82-aoa"/>
+                            <constraint firstItem="2Eg-SX-Ig5" firstAttribute="top" secondItem="TZw-Ed-qlY" secondAttribute="top" constant="20" id="hcJ-ST-Dfa"/>
                             <constraint firstItem="TZw-Ed-qlY" firstAttribute="bottom" secondItem="dNC-AO-79d" secondAttribute="bottom" id="mco-c7-VZl"/>
-                            <constraint firstItem="3zB-UG-weX" firstAttribute="leading" secondItem="TZw-Ed-qlY" secondAttribute="leading" constant="20" id="vgY-Fm-dyn"/>
+                            <constraint firstItem="TZw-Ed-qlY" firstAttribute="trailing" secondItem="2Eg-SX-Ig5" secondAttribute="trailing" constant="20" id="v2P-T5-1hM"/>
                             <constraint firstItem="dNC-AO-79d" firstAttribute="top" secondItem="TZw-Ed-qlY" secondAttribute="top" id="x8T-IX-90R"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TZw-Ed-qlY"/>
@@ -130,6 +145,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="TcX-QL-usd" id="b7n-cm-7K5"/>
+                        <outlet property="moodSegmentedControl" destination="Fc1-lv-0e3" id="uYl-cb-rB6"/>
                         <outlet property="titleTextField" destination="3zB-UG-weX" id="6bD-ej-Sp5"/>
                     </connections>
                 </viewController>
